--- a/module_map/src/main/AndroidManifest.xml
+++ b/module_map/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="com.mredrock.cyxbs.discover.map">
 
     <application>
-        <activity android:name=".ui.activity.MapActivity"
+        <activity android:name=".ui.activity.activity.MapActivity"
             android:launchMode="singleTop"/>
     </application>
 </manifest>
