--- a/module_map/build.gradle
+++ b/module_map/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
     kapt deps.arouter.compiler
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
+    implementation 'com.to.aboomy:pager2banner:1.0.1'
 }
