[feature]添加地点详情页的描述，关于该地点

--- a/module_map/build.gradle
+++ b/module_map/build.gradle
@@ -11,4 +11,5 @@ dependencies {
     kapt deps.arouter.compiler
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
     implementation 'com.to.aboomy:pager2banner:1.0.1'
+    implementation 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
 }
