[fix]MapLayout使用掌邮工具类进行隐藏和展示icon

--- a/module_map/build.gradle
+++ b/module_map/build.gradle
@@ -1,5 +1,6 @@
 apply from: module_config
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 dependencies {
     implementation project(':lib_common')
