--- a/module_map/src/main/AndroidManifest.xml
+++ b/module_map/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application>
         <activity android:name=".ui.activity.activity.MapActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden"
             android:launchMode="singleTop"/>
     </application>
 </manifest>
