--- a/module_map/build.gradle
+++ b/module_map/build.gradle
@@ -12,5 +12,5 @@ dependencies {
     kapt deps.arouter.compiler
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
     implementation 'com.to.aboomy:pager2banner:1.0.1'
-    implementation 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    implementation 'com.google.android:flexbox:2.0.1'
 }
