--- a/module_map/src/main/AndroidManifest.xml
+++ b/module_map/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
           package="com.mredrock.cyxbs.discover.map">
 
     <application>
-        <activity android:name=".ui.activity.activity.MapActivity"
+        <activity
+            android:name="com.mredrock.cyxbs.discover.map.ui.activity.MapActivity"
             android:windowSoftInputMode="adjustPan|stateHidden"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop" />
     </application>
 </manifest>
