--- a/module_map/src/main/module/AndroidManifest.xml
+++ b/module_map/src/main/module/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activity.activity.VRActivity"></activity>
-        <activity android:name=".ui.activity.activity.MapActivity">
+        <activity android:name=".ui.activity.VRActivity"></activity>
+        <activity android:name=".ui.activity.MapActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
